--- a/public/about/assets/about.css
+++ b/public/about/assets/about.css
@@ -26,19 +26,19 @@ body {
 
 .logo {
     text-align: left;
+    display: flex;
+    align-items: baseline;
 }
 
 .logo img {
     width: 50px;
     height: 50px;
+    padding-right: 20px;
 }
 
 h1 {
-    margin-top: 20px;
-    margin-bottom: 0;
     color: #06385d;
     font-size: 3.4rem;
-    line-height: 1.0;
     font-weight: bold;
 }
 
