--- a/public/google-drive-integration/assets/about.css
+++ b/public/google-drive-integration/assets/about.css
@@ -18,26 +18,25 @@ body {
     border-top: 3px solid #444444;
     background-color: #FAFBFD;
     padding: 20px 20px;
-    max-width: 800px;
-    line-height: 180%;
     height: 100%;
     font-family: "Open Sans", sans-serif;
 }
 
 .logo {
     text-align: left;
+    display: flex;
+    align-items: baseline;
 }
 
 .logo img {
     width: 50px;
     height: 50px;
+    padding-right: 20px;
 }
 
 h1 {
-    margin-top: 20px;
-    margin-bottom: 60px;
     color: #06385d;
-    line-height: 1.0;
+    font-size: 3.4rem;
     font-weight: bold;
 }
 
@@ -46,7 +45,7 @@ img {
 }
 
 p {
-    padding: 1rem 1rem;
+    padding: 2rem 1rem;
     color: #555555;
 }
 
