--- a/public/about/assets/about.css
+++ b/public/about/assets/about.css
@@ -27,7 +27,7 @@ body {
 .logo {
     text-align: left;
     display: flex;
-    align-items: baseline;
+    align-items: flex-end;
 }
 
 .logo img {
@@ -37,13 +37,12 @@ body {
 }
 
 h1 {
+    margin-top: 20px;
+    margin-bottom: 0;
     color: #06385d;
     font-size: 3.4rem;
+    line-height: 1.0;
     font-weight: bold;
-}
-
-img {
-    margin-bottom: 30px;
 }
 
 p {
