--- a/public/google-drive-integration/assets/about.css
+++ b/public/google-drive-integration/assets/about.css
@@ -25,7 +25,8 @@ body {
 .logo {
     text-align: left;
     display: flex;
-    align-items: baseline;
+    align-items: flex-end;
+    margin-bottom: 40px;
 }
 
 .logo img {
@@ -35,13 +36,12 @@ body {
 }
 
 h1 {
+    margin-top: 20px;
+    margin-bottom: 0;
     color: #06385d;
     font-size: 3.4rem;
+    line-height: 1.0;
     font-weight: bold;
-}
-
-img {
-    margin-bottom: 30px;
 }
 
 p {
