--- a/public/privacy-policy/assets/about.css
+++ b/public/privacy-policy/assets/about.css
@@ -26,11 +26,14 @@ body {
 
 .logo {
     text-align: left;
+    display: flex;
+    align-items: flex-end;
 }
 
 .logo img {
     width: 50px;
     height: 50px;
+    padding-right: 20px;
 }
 
 h1 {
@@ -40,10 +43,6 @@ h1 {
     font-size: 3.4rem;
     line-height: 1.0;
     font-weight: bold;
-}
-
-img {
-    margin-bottom: 30px;
 }
 
 p {
